--- a/index.html
+++ b/index.html
@@ -3,65 +3,226 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUNSHINE</title>
+    <title>로그인|회사명</title>
+    <meta name="keywords" content="모바일 | TV | 가전 | IT" />
+    <meta name="description" content="모바일 | TV | 가전 | IT" />
+    <meta name="author" content="김은영" />
+    <meta name="thumbnail" content="" alt="" />
 
+    <!-- sns 대표이미지, 사이트제목, 키워드 표시(500*500)  -->
+    <meta property="og:url" content="사이트 url" />
+    <meta property="og:image" content="대표이미지 경로" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="사이트제목" />
+    <meta property="og:locale" content="ko" />
+    <meta property="og:title" content="사이트 키워드" />
+    <meta property="og:description" content="사이트 키워드" />
+    <meta property="og:country-name" content="국가이름" />
+
+    <!-- 파비콘(32*32) -->
+    <link rel="shortcut icon" href="파비콘이미지경로(확장자는 ico, png 가능)" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+      integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/animate.css" />
     <link rel="stylesheet" href="./css/index.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
+      integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+      integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
   </head>
   <body>
     <div id="header">
       <div class="row cf">
         <h1>
           <a href="#">
-            <img src="./images/logo-2.png" alt="company" />
+            <img
+              src="./image/워드프레스 기업홈페이지1 로고.png"
+              alt="company"
+            />
           </a>
         </h1>
         <div id="nav">
           <ul class="depth1">
             <li>
-              <a href="#">COMPANY</a>
+              <a href="#">회사소개</a>
               <ul class="depth2">
                 <li><a href="#">인사말</a></li>
-                <li><a href="#">연혁</a></li>
-                <li><a href="#">조직도</a></li>
-                <li><a href="#">오시는 길</a></li>
+                <li><a href="#">회사개요</a></li>
+                <li><a href="#">주요연혁</a></li>
+                <li><a href="#">오시는길</a></li>
               </ul>
             </li>
             <li>
-              <a href="#">BUSINESS</a>
+              <a href="#">사업분야</a>
               <ul class="depth2">
-                <li><a href="#">사업소개</a></li>
-                <li><a href="#">사업분야</a></li>
+                <li><a href="#">통신공사</a></li>
+                <li><a href="#">데이터센터 인프라 구축</a></li>
+                <li><a href="#">영상보안 구축</a></li>
+                <li><a href="#">IT Network 장비 유통 및 구축</a></li>
               </ul>
             </li>
-            <li>
-              <a href="#">PRODUCT</a>
-              <ul class="depth2">
-                <li><a href="#">갤러리(A타입)</a></li>
-                <li><a href="#">갤러리(B타입)</a></li>
-                <li><a href="#">갤러리(C타입)</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">ONLINE</a>
-              <ul class="depth2">
-                <li><a href="#">온라인문의</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">COMMUNITY</a>
-              <ul class="depth2">
-                <li><a href="#">공지사항</a></li>
-                <li><a href="#">질문과 답변</a></li>
-                <li><a href="#">자주묻는 질문</a></li>
-              </ul>
-            </li>
+            <li><a href="#">제품소개</a></li>
+            <li><a href="#">실적및인증서</a></li>
+            <li><a href="#">고객지원</a></li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div id="section"></div>
+    <div id="section">
+      <div class="slideOuter">
+        <div class="slideInner">
+          <div class="slide">
+            <img src="./image/silde1.jpg" alt="" />
+            <div class="text">
+              <h2>Solution System 1</h2>
+              <p>
+                탁월한 기술력을 바탕으로 고객의 비즈니스 지속 가능성을 돕습니다.
+              </p>
+              <a href="#">자세히보기</a>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="./image/silde2.jpg" alt="" />
+            <div class="text">
+              <h2>Solution System 2</h2>
+              <p>
+                탁월한 기술력을 바탕으로 고객의 비즈니스 지속 가능성을 돕습니다.
+              </p>
+              <a href="#">자세히보기</a>
+            </div>
+          </div>
+        </div>
+        <div class="plapau">
+          <i class="fa-solid fa-pause"></i>
+        </div>
+      </div>
+      <div class="business">
+        <ul>
+          <li>
+            <p><img src="./image/icon1.png" alt="" /></p>
+            <h3>
+              Communication
+              <span>통신공사</span>
+            </h3>
+            <a href="#">자세히보기</a>
+          </li>
+          <li>
+            <p><img src="./image/icon2.png" alt="" /></p>
+            <h3>
+              Data Center
+              <span>데이터센터 인프라 구축</span>
+            </h3>
+            <a href="#">자세히보기</a>
+          </li>
+          <li>
+            <p><img src="./image/icon3.png" alt="" /></p>
+            <h3>
+              Video Security
+              <span>영상보안 구축</span>
+            </h3>
+            <a href="#">자세히보기</a>
+          </li>
+          <li>
+            <p><img src="./image/icon4.png" alt="" /></p>
+            <h3>
+              IT Network
+              <span>네크워크장비 유통</span>
+            </h3>
+            <a href="#">자세히보기</a>
+          </li>
+        </ul>
+      </div>
+      <div class="product">
+        <div class="row">
+          <div class="text">
+            <h2>L&amp;C PRODUCT</h2>
+            <p>
+              우리 회사의<br />
+              다양한 제품을 만나보세요.
+            </p>
+            <div class="btn">
+              <a href="#">자세히보기</a>
+              <a href="#">고객지원</a>
+            </div>
+          </div>
+          <div class="photo">
+            <img src="./image/product_img.jpg.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="customer">
+        <div class="row">
+          <h2>CUSTOMER</h2>
+          <div>
+            <span><img src="./image/comstomer-1.jpg" alt="" /></span>
+            <span><img src="./image/comstomer-2.jpg" alt="" /></span>
+            <span><img src="./image/comstomer-3.jpg" alt="" /></span>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div id="footer"></div>
+    <div id="footer">
+      <div class="address">
+        <div class="row">
+          <pre>
+우리회사
+서울특별시 강남구 강남대로162길 27-3 두리빌딩 502호
+<a href="tel:1234-5679">TEL : 1234-5679</a>   Fax : 02-456-7890
+<a href="mailto:webplanning.kr@gmail.com">Email : webplanning.kr@gmail.com</a>
+</pre>
+        </div>
+      </div>
+      <div class="copyright">
+        <div class="row">
+          Copyright &copy; 2022 &nbsp;&nbsp;&nbsp; 웹플래닝 All Rights Reserved.
+        </div>
+      </div>
+    </div>
+
+    <script>
+      $(".slideInner").slick({
+        autoplaySpeed: 3000,
+        speed: 300,
+        autoplay: true,
+        dots: true,
+        arrows: true,
+        prevArrow:
+          '<button class="slick-prev slick-arrow" aria-label="Previous" type="button"><i class="fa-solid fa-chevron-left"></i></button>',
+        nextArrow:
+          '<button class="slick-next slick-arrow" aria-label="Next" type="button"><i class="fa-solid fa-chevron-right"></i></button>',
+      });
+
+      $(".slideOuter .plapau i").on("click", function () {
+        if ($(this).hasClass("fa-pause")) {
+          $(".slideInner").slick("slickPause");
+          $(this).removeClass("fa-pause").addClass("fa-play");
+        } else {
+          $(".slideInner").slick("slickPlay");
+          $(this).removeClass("fa-play").addClass("fa-pause");
+        }
+      });
+    </script>
   </body>
 </html>
